plugins {
    id("java")
    id("com.gradleup.shadow") version "8.3.0"
}

group = "cc.ghosty"
version = "1.4.0"

repositories {
    mavenCentral()
    maven("https://hub.spigotmc.org/nexus/content/repositories/snapshots/")
    maven("https://repo.codemc.io/repository/maven-snapshots/")
    maven("https://haoshoku.xyz:8081/repository/default/")
    maven("https://mvn.intelligence-modding.de/haoshoku")
    maven("https://jitpack.io")
}

dependencies {
    implementation(project(":API"))
    compileOnly("org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT")

//    compileOnly("xyz.haoshoku.nick:nickapi:7.2-SNAPSHOT")
    compileOnly("xyz/haoshoku/nick:NickAPI:v6.7")

    implementation("net.kyori:adventure-api:4.17.0")
    implementation("net.kyori:adventure-text-minimessage:4.17.0")
    implementation("net.kyori:adventure-text-serializer-legacy:4.17.0")
    implementation("net.kyori:adventure-platform-bungeecord:4.3.4")

    implementation("com.samjakob:SpiGUI:v1.3.1")
    implementation("net.wesjd:anvilgui:1.10.3-SNAPSHOT")

    compileOnly("org.projectlombok:lombok:1.18.34")
    annotationProcessor("org.projectlombok:lombok:1.18.34")
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks {
    compileJava {
        options.encoding = "UTF-8"
    }

    assemble {
        dependsOn(shadowJar)
    }

    shadowJar {
        archiveFileName.set("${project.name}-${project.version}.jar")
        minimize {
            exclude(project(":API"))
            exclude(dependency("net.wesjd:anvilgui:.*"))
        }
        relocate("com.samjakob.spigui", "cc.ghosty.kamoof.deps.com.samjakob.spigui")
        relocate("net.wesjd.anvilgui", "cc.ghosty.kamoof.deps.net.wesjd.anvilgui")
    }

    processResources {
        inputs.property("version", version)

        filesMatching(listOf("plugin.yml")) {
            expand(inputs.properties)
        }
    }
}
